--- a/index.html
+++ b/index.html
@@ -4,80 +4,110 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Plant Back Earth - 지구 재생</title>
-  <link rel="stylesheet" href="./style.css?v=final1">
-  <!-- favicon 경고 없애고 싶으면 아래 파일 만들기: favicon.ico -->
+
+  <!-- 캐시 때문에 UI 적용 안되면 v= 숫자만 올려 -->
+  <link rel="stylesheet" href="./style.css?v=final2">
   <link rel="icon" href="./favicon.ico">
 </head>
+
 <body>
   <div class="wrap">
-    <aside class="hud">
-      <h1 class="title">Plant<br/>Back<br/>Earth</h1>
 
-      <div class="hudBox">
-        <div class="row"><span>Stage</span><b id="stage">1</b></div>
-        <div class="row"><span>HP</span><b><span id="hp">100</span>/<span id="maxHp">100</span></b></div>
-        <div class="row"><span>O₂</span><b><span id="o2">50</span>/<span id="maxO2">50</span></b></div>
-        <div class="row"><span>Seed</span><b id="seedInv">0</b></div>
-        <div class="row"><span>Plant</span><b><span id="planted">0</span>/<span id="total">0</span></b></div>
-        <div class="row"><span>Score</span><b id="score">0</b></div>
-      </div>
-
-      <div class="cardsTitle">보유 카드</div>
-      <div id="ownedCards" class="ownedCards"></div>
-
-      <div class="hintTitle">힌트</div>
-      <div id="hint" class="hint">←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO</div>
-
-      <div id="stageRuleOverlay" class="stageRule"></div>
-    </aside>
-
-    <main class="gameArea">
-      <canvas id="gameCanvas" width="960" height="540"></canvas>
-
-      <!-- 카드 선택 오버레이 -->
-      <div id="cardOverlay" class="overlay">
-        <div class="overlayPanel">
-          <div class="overlayTop">
-            <div id="cardTitle" class="overlayTitle">카드 선택</div>
-            <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
-          </div>
-          <div id="cardRow" class="cardRow"></div>
+    <!-- ✅ 예전 UI: 상단 Topbar -->
+    <header class="topbar">
+      <div class="brand">
+        <div class="logo"><span>🤖🌱</span></div>
+        <div class="titleBlock">
+          <div class="name">Plant Back Earth</div>
+          <div class="sub">2D 파쿠르 · 지구 재생 프로젝트</div>
         </div>
       </div>
 
-      <!-- 로딩 -->
-      <div id="loading" class="loading">
-        <div class="loadingBox">
-          <div class="spinner"></div>
-          <div id="loadingText" class="loadingText">Loading…</div>
-        </div>
+      <!-- HUD (기존 id 유지) -->
+      <div class="hud" aria-label="HUD">
+        <div class="hudItem"><span class="k">Stage</span><span class="v" id="stage">1</span></div>
+        <div class="hudItem"><span class="k">HP</span><span class="v"><span id="hp">100</span>/<span id="maxHp">100</span></span></div>
+        <div class="hudItem"><span class="k">O₂</span><span class="v"><span id="o2">50</span>/<span id="maxO2">50</span></span></div>
+        <div class="hudItem"><span class="k">Seeds</span><span class="v" id="seedInv">0</span></div>
+        <div class="hudItem"><span class="k">Planted</span><span class="v"><span id="planted">0</span>/<span id="total">0</span></span></div>
+        <div class="hudItem"><span class="k">Score</span><span class="v" id="score">0</span></div>
       </div>
+    </header>
 
-      <!-- 산소 0 경고 -->
-      <div id="warnOverlay" class="warnOverlay">⚠ 산소가 0입니다! HP 감소 중…</div>
+    <!-- ✅ 본문: 캔버스 + 우측 패널 -->
+    <section class="main">
 
-      <!-- 대화창 -->
-      <div id="dialogue" class="dialogue">
-        <div class="dlgTop">
-          <img id="dlgAvatar" class="dlgAvatar" alt="avatar"/>
-          <div class="dlgMeta">
-            <div id="dlgName" class="dlgName">???</div>
-            <div id="dlgRole" class="dlgRole">SYSTEM</div>
+      <!-- 왼쪽: 게임 프레임 -->
+      <div class="gameFrame">
+        <canvas id="gameCanvas" width="960" height="540"></canvas>
+
+        <!-- 산소 0 경고 (기존 id 유지) -->
+        <div id="warnOverlay" class="warnOverlay">⚠ 산소가 0입니다! HP 감소 중…</div>
+
+        <!-- 대화창 (캔버스 위) -->
+        <div id="dialogue" class="dialogue">
+          <div class="dlgTop">
+            <img id="dlgAvatar" class="dlgAvatar" alt="avatar"/>
+            <div class="dlgMeta">
+              <div id="dlgName" class="dlgName">???</div>
+              <div id="dlgRole" class="dlgRole">SYSTEM</div>
+            </div>
+            <div class="dlgBtns">
+              <button id="dlgAutoBtn" class="btn">AUTO: OFF</button>
+              <button id="dlgSkipBtn" class="btn">SKIP</button>
+            </div>
           </div>
-          <div class="dlgBtns">
-            <button id="dlgAutoBtn" class="btn">AUTO: OFF</button>
-            <button id="dlgSkipBtn" class="btn">SKIP</button>
+
+          <div id="dlgText" class="dlgText">…</div>
+
+          <div class="dlgBottom">
+            <div id="dlgNext" class="dlgNext">▶</div>
           </div>
         </div>
-
-        <div id="dlgText" class="dlgText">…</div>
-        <div class="dlgBottom">
-          <div id="dlgNext" class="dlgNext">▶</div>
-        </div>
       </div>
-    </main>
+
+      <!-- 오른쪽: 사이드 패널 -->
+      <aside class="side">
+        <div class="panelBox">
+          <div class="panelTitle">보유 카드</div>
+          <div id="ownedCards" class="ownedCards"></div>
+        </div>
+
+        <div class="panelBox">
+          <div class="panelTitle">힌트</div>
+          <div id="hint" class="hint">←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO</div>
+        </div>
+
+        <div class="panelBox">
+          <div class="panelTitle">RULE</div>
+          <div id="stageRuleOverlay" class="hint">추가 규칙 없음</div>
+        </div>
+      </aside>
+
+    </section>
+
   </div>
 
-  <script type="module" src="./game.js?v=final1"></script>
+  <!-- ✅ 카드 선택 오버레이 (기존 id 유지) -->
+  <div id="cardOverlay" class="overlay">
+    <div class="overlayPanel">
+      <div class="overlayTop">
+        <div id="cardTitle" class="overlayTitle">카드 선택</div>
+        <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
+      </div>
+      <div id="cardRow" class="cardRow"></div>
+    </div>
+  </div>
+
+  <!-- ✅ 로딩 (기존 id 유지) -->
+  <div id="loading" class="loading">
+    <div class="loadingBox">
+      <div class="spinner"></div>
+      <div id="loadingText" class="loadingText">Loading…</div>
+    </div>
+  </div>
+
+  <!-- game.js 로드 (캐시 방지용 v 올려) -->
+  <script type="module" src="./game.js?v=final2"></script>
 </body>
 </html>
