--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Plant Back Earth - 지구 재생</title>
 
-  <!-- 캐시 때문에 UI 적용 안되면 v= 숫자만 올려 -->
-  <link rel="stylesheet" href="./style.css?v=final2">
+  <!-- 캐시 때문에 적용 안되면 v만 바꿔 -->
+  <link rel="stylesheet" href="./style.css?v=finalUI1">
   <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
   <div class="wrap">
 
-    <!-- ✅ 예전 UI: 상단 Topbar -->
+    <!-- 상단 바 -->
     <header class="topbar">
       <div class="brand">
-        <div class="logo"><span>🤖🌱</span></div>
-        <div class="titleBlock">
-          <div class="name">Plant Back Earth</div>
-          <div class="sub">2D 파쿠르 · 지구 재생 프로젝트</div>
+        <div class="brandIcon">
+          <div class="brandBot">🤖</div>
+          <div class="brandLeaf">🌱</div>
+        </div>
+        <div class="brandText">
+          <div class="brandName">Plant Back Earth</div>
+          <div class="brandSub">2D 파쿠르 · 지구 재생 프로젝트</div>
         </div>
       </div>
 
-      <!-- HUD (기존 id 유지) -->
+      <!-- HUD (game.js가 찾는 id 유지) -->
       <div class="hud" aria-label="HUD">
         <div class="hudItem"><span class="k">Stage</span><span class="v" id="stage">1</span></div>
         <div class="hudItem"><span class="k">HP</span><span class="v"><span id="hp">100</span>/<span id="maxHp">100</span></span></div>
@@ -34,39 +37,58 @@
       </div>
     </header>
 
-    <!-- ✅ 본문: 캔버스 + 우측 패널 -->
+    <!-- 메인 -->
     <section class="main">
 
-      <!-- 왼쪽: 게임 프레임 -->
+      <!-- 게임 캔버스 프레임 -->
       <div class="gameFrame">
         <canvas id="gameCanvas" width="960" height="540"></canvas>
 
-        <!-- 산소 0 경고 (기존 id 유지) -->
-        <div id="warnOverlay" class="warnOverlay">⚠ 산소가 0입니다! HP 감소 중…</div>
+        <!-- 산소 0 경고 (id 유지) -->
+        <div id="warnOverlay" class="warnOverlay">
+          <div class="warnChip">
+            <div class="warnDot"></div>
+            <div class="warnTxt">⚠ 산소가 0입니다! HP 감소 중…</div>
+          </div>
+        </div>
 
-        <!-- 대화창 (캔버스 위) -->
+        <!-- 대화창 (id 유지) -->
         <div id="dialogue" class="dialogue">
-          <div class="dlgTop">
-            <img id="dlgAvatar" class="dlgAvatar" alt="avatar"/>
-            <div class="dlgMeta">
-              <div id="dlgName" class="dlgName">???</div>
-              <div id="dlgRole" class="dlgRole">SYSTEM</div>
+          <div class="dlgInner">
+            <div class="dlgPortrait">
+              <div class="avatarGlow"></div>
+              <div class="avatar">
+                <img id="dlgAvatar" alt="avatar" />
+              </div>
             </div>
-            <div class="dlgBtns">
-              <button id="dlgAutoBtn" class="btn">AUTO: OFF</button>
-              <button id="dlgSkipBtn" class="btn">SKIP</button>
+
+            <div class="dlgBox">
+              <div class="dlgTop">
+                <div class="namePlate">
+                  <div id="dlgName" class="dlgName">???</div>
+                  <div id="dlgRole" class="dlgRole">SYSTEM</div>
+                </div>
+                <div class="dlgControls">
+                  <button id="dlgAutoBtn" class="miniBtn">AUTO: OFF</button>
+                  <button id="dlgSkipBtn" class="miniBtn">SKIP</button>
+                </div>
+              </div>
+
+              <div class="dlgBubble">
+                <div id="dlgText" class="dlgText">…</div>
+                <div class="dlgHint">
+                  <span>클릭/Space: 다음</span>
+                  <span>Shift: AUTO 토글</span>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div id="dlgText" class="dlgText">…</div>
-
-          <div class="dlgBottom">
-            <div id="dlgNext" class="dlgNext">▶</div>
-          </div>
+          <div id="dlgNext" class="dlgNext">▶</div>
         </div>
       </div>
 
-      <!-- 오른쪽: 사이드 패널 -->
+      <!-- 오른쪽 패널 -->
       <aside class="side">
         <div class="panelBox">
           <div class="panelTitle">보유 카드</div>
@@ -75,20 +97,21 @@
 
         <div class="panelBox">
           <div class="panelTitle">힌트</div>
-          <div id="hint" class="hint">←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO</div>
+          <div id="hint" class="hint">
+            ←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO
+          </div>
         </div>
 
         <div class="panelBox">
           <div class="panelTitle">RULE</div>
-          <div id="stageRuleOverlay" class="hint">추가 규칙 없음</div>
+          <div id="stageRuleOverlay" class="ruleBox">추가 규칙 없음</div>
         </div>
       </aside>
 
     </section>
-
   </div>
 
-  <!-- ✅ 카드 선택 오버레이 (기존 id 유지) -->
+  <!-- 카드 선택 오버레이 (id 유지) -->
   <div id="cardOverlay" class="overlay">
     <div class="overlayPanel">
       <div class="overlayTop">
@@ -96,10 +119,11 @@
         <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
       </div>
       <div id="cardRow" class="cardRow"></div>
+      <div class="overlayHint">클릭으로 선택 (시간 초과 시 자동 선택)</div>
     </div>
   </div>
 
-  <!-- ✅ 로딩 (기존 id 유지) -->
+  <!-- 로딩 (id 유지) -->
   <div id="loading" class="loading">
     <div class="loadingBox">
       <div class="spinner"></div>
@@ -107,7 +131,6 @@
     </div>
   </div>
 
-  <!-- game.js 로드 (캐시 방지용 v 올려) -->
-  <script type="module" src="./game.js?v=final2"></script>
+  <script type="module" src="./game.js?v=finalUI1"></script>
 </body>
 </html>
