--- a/index.html
+++ b/index.html
@@ -3,120 +3,133 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Plant Back Earth</title>
-  <link rel="stylesheet" href="./style.css?v=final_pack_1">
+  <title>Plant Back Earth - 지구 재생</title>
+
+  <!-- 캐시 방지: 숫자만 바꿔 -->
+  <link rel="stylesheet" href="./style.css?v=ui_full_01">
   <link rel="icon" href="./favicon.ico">
 </head>
+
 <body>
+  <div class="app">
 
-  <!-- ✅ START SCREEN (PNG 전체배경) -->
-  <div id="startScreen" class="screenOverlay is-open" aria-hidden="false">
-    <div class="screenBg" style="background-image:url('./ui/start.png')"></div>
-    <div class="screenShade"></div>
-    <div class="screenUI">
-      <button id="btnStart" class="screenBtn primary">START</button>
-      <button id="btnHow" class="screenBtn">HOW TO</button>
-    </div>
-
-    <div id="howPanel" class="howPanel">
-      <div class="howCard">
-        <div class="howTitle">조작</div>
-        <div class="howText">
-          ←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO
+    <!-- TOP BAR -->
+    <header class="topbar">
+      <div class="brand">
+        <div class="brandIcon">
+          <span class="bot">🤖</span>
+          <span class="leaf">🌱</span>
         </div>
-        <button id="btnHowClose" class="screenBtn">닫기</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- ✅ GAME UI -->
-  <div class="wrap">
-    <aside class="hud">
-      <h1 class="title">Plant<br/>Back<br/>Earth</h1>
-
-      <div class="hudBox">
-        <div class="row"><span>Stage</span><b id="stage">1</b></div>
-        <div class="row"><span>HP</span><b><span id="hp">100</span>/<span id="maxHp">100</span></b></div>
-        <div class="row"><span>O₂</span><b><span id="o2">50</span>/<span id="maxO2">50</span></b></div>
-        <div class="row"><span>Seed</span><b id="seedInv">0</b></div>
-        <div class="row"><span>Plant</span><b><span id="planted">0</span>/<span id="total">0</span></b></div>
-        <div class="row"><span>Score</span><b id="score">0</b></div>
-      </div>
-
-      <div class="cardsTitle">보유 카드</div>
-      <div id="ownedCards" class="ownedCards"></div>
-
-      <div class="hintTitle">힌트</div>
-      <div id="hint" class="hint">←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift AUTO</div>
-
-      <div id="stageRuleOverlay" class="stageRule"></div>
-    </aside>
-
-    <main class="gameArea">
-      <canvas id="gameCanvas" width="960" height="540"></canvas>
-
-      <!-- 카드 선택 오버레이 -->
-      <div id="cardOverlay" class="overlay">
-        <div class="overlayPanel">
-          <div class="overlayTop">
-            <div id="cardTitle" class="overlayTitle">카드 선택</div>
-            <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
-          </div>
-          <div id="cardRow" class="cardRow"></div>
+        <div class="brandText">
+          <div class="brandName">Plant Back Earth</div>
+          <div class="brandSub">2D 파쿠르 · 지구 재생 프로젝트</div>
         </div>
       </div>
 
-      <!-- 로딩 -->
-      <div id="loading" class="loading">
-        <div class="loadingBox">
-          <div class="spinner"></div>
-          <div id="loadingText" class="loadingText">Loading…</div>
-        </div>
+      <!-- HUD pills (id는 game.js 호환) -->
+      <div class="hud">
+        <div class="pill"><span class="k">Stage</span><b class="v" id="stage">1</b></div>
+        <div class="pill"><span class="k">HP</span><b class="v"><span id="hp">100</span>/<span id="maxHp">100</span></b></div>
+        <div class="pill"><span class="k">O₂</span><b class="v"><span id="o2">50</span>/<span id="maxO2">50</span></b></div>
+        <div class="pill"><span class="k">Seeds</span><b class="v" id="seedInv">0</b></div>
+        <div class="pill"><span class="k">Planted</span><b class="v"><span id="planted">0</span>/<span id="total">0</span></b></div>
+        <div class="pill"><span class="k">Score</span><b class="v" id="score">0</b></div>
       </div>
+    </header>
 
-      <!-- 산소 0 경고 -->
-      <div id="warnOverlay" class="warnOverlay">⚠ 산소가 0입니다! HP 감소 중…</div>
+    <!-- MAIN -->
+    <main class="content">
+      <!-- GAME -->
+      <section class="gameShell">
+        <canvas id="gameCanvas" width="960" height="540"></canvas>
 
-      <!-- 대화창 -->
-      <div id="dialogue" class="dialogue">
-        <div class="dlgTop">
-          <img id="dlgAvatar" class="dlgAvatar" alt="avatar"/>
-          <div class="dlgMeta">
-            <div id="dlgName" class="dlgName">???</div>
-            <div id="dlgRole" class="dlgRole">SYSTEM</div>
-          </div>
-          <div class="dlgBtns">
-            <button id="dlgAutoBtn" class="btn">AUTO: OFF</button>
-            <button id="dlgSkipBtn" class="btn">SKIP</button>
+        <!-- O2 0 warning (id 유지) -->
+        <div id="warnOverlay" class="warnOverlay">
+          <div class="warnChip">
+            <span class="dot"></span>
+            <span class="txt">⚠ 산소가 0입니다! HP 감소 중…</span>
           </div>
         </div>
 
-        <div id="dlgText" class="dlgText">…</div>
-        <div class="dlgBottom">
+        <!-- DIALOGUE (id 유지) -->
+        <div id="dialogue" class="dialogue is-open">
+          <div class="dlgWrap">
+            <div class="dlgLeft">
+              <div class="avatarFrame">
+                <img id="dlgAvatar" alt="avatar"/>
+              </div>
+              <div class="avatarLabel">avatar</div>
+            </div>
+
+            <div class="dlgMain">
+              <div class="dlgTop">
+                <div class="who">
+                  <span id="dlgName" class="dlgName">연구원1</span>
+                  <span id="dlgRole" class="dlgRole">LAB-01</span>
+                </div>
+                <div class="dlgBtns">
+                  <button id="dlgAutoBtn" class="btnGhost">AUTO: OFF</button>
+                  <button id="dlgSkipBtn" class="btnGhost">SKIP</button>
+                </div>
+              </div>
+
+              <div class="dlgTextArea">
+                <div id="dlgText" class="dlgText">…</div>
+              </div>
+
+              <div class="dlgBottom">
+                <div class="dlgHelp">클릭/Space: 다음</div>
+                <div class="dlgHelp">Shift: AUTO 토글</div>
+              </div>
+            </div>
+          </div>
+
           <div id="dlgNext" class="dlgNext">▶</div>
         </div>
-      </div>
+      </section>
+
+      <!-- RIGHT SIDE -->
+      <aside class="right">
+        <div class="panel">
+          <div class="panelTitle">보유 카드</div>
+          <div id="ownedCards" class="ownedCards"></div>
+        </div>
+
+        <div class="panel">
+          <div class="panelTitle">힌트</div>
+          <div id="hint" class="hint">
+            ←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift 자동대화
+          </div>
+        </div>
+
+        <div class="panel" style="display:none">
+          <div class="panelTitle">RULE</div>
+          <div id="stageRuleOverlay" class="ruleBox">추가 규칙 없음</div>
+        </div>
+      </aside>
     </main>
   </div>
 
-  <!-- ✅ END SCREEN (Stage7 clear 시) -->
-  <div id="endScreen" class="screenOverlay" aria-hidden="true">
-    <div class="screenBg" style="background-image:url('./ui/ending.png')"></div>
-    <div class="screenShade"></div>
-    <div class="screenUI endUI">
-      <div class="endTitle">MISSION COMPLETE</div>
-      <div class="endSub">Stage 7 정화 완료</div>
-      <div class="endStats">
-        <div>Score: <b id="endScore">0</b></div>
-        <div>Planted: <b id="endPlanted">0</b></div>
+  <!-- CARD OVERLAY (id 유지) -->
+  <div id="cardOverlay" class="overlay">
+    <div class="overlayPanel">
+      <div class="overlayTop">
+        <div id="cardTitle" class="overlayTitle">스테이지 시작 - 카드 선택</div>
+        <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
       </div>
-      <div class="endBtns">
-        <button id="btnRestart" class="screenBtn primary">RESTART</button>
-        <button id="btnHome" class="screenBtn">HOME</button>
-      </div>
+      <div id="cardRow" class="cardRow"></div>
+      <div class="overlayHint">클릭으로 선택</div>
     </div>
   </div>
 
-  <script type="module" src="./game.js?v=final_pack_1"></script>
+  <!-- LOADING (id 유지) -->
+  <div id="loading" class="loading">
+    <div class="loadingBox">
+      <div class="spinner"></div>
+      <div id="loadingText" class="loadingText">Loading…</div>
+    </div>
+  </div>
+
+  <script type="module" src="./game.js?v=ui_full_01"></script>
 </body>
 </html>
