--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Plant Back Earth - 지구 재생</title>
-
-  <!-- 캐시 방지: 숫자만 바꿔 -->
-  <link rel="stylesheet" href="./style.css?v=ui_full_01">
+  <link rel="stylesheet" href="./style.css?v=ui_final">
   <link rel="icon" href="./favicon.ico">
 </head>
-
 <body>
   <div class="app">
 
@@ -17,119 +14,116 @@
     <header class="topbar">
       <div class="brand">
         <div class="brandIcon">
-          <span class="bot">🤖</span>
-          <span class="leaf">🌱</span>
+          <img src="./robot.png" alt="robot" onerror="this.style.display='none'">
+          <span class="fallback">🤖</span>
         </div>
         <div class="brandText">
-          <div class="brandName">Plant Back Earth</div>
+          <div class="brandTitle">Plant Back Earth</div>
           <div class="brandSub">2D 파쿠르 · 지구 재생 프로젝트</div>
         </div>
       </div>
 
-      <!-- HUD pills (id는 game.js 호환) -->
-      <div class="hud">
-        <div class="pill"><span class="k">Stage</span><b class="v" id="stage">1</b></div>
-        <div class="pill"><span class="k">HP</span><b class="v"><span id="hp">100</span>/<span id="maxHp">100</span></b></div>
-        <div class="pill"><span class="k">O₂</span><b class="v"><span id="o2">50</span>/<span id="maxO2">50</span></b></div>
-        <div class="pill"><span class="k">Seeds</span><b class="v" id="seedInv">0</b></div>
-        <div class="pill"><span class="k">Planted</span><b class="v"><span id="planted">0</span>/<span id="total">0</span></b></div>
-        <div class="pill"><span class="k">Score</span><b class="v" id="score">0</b></div>
+      <div class="pillRow">
+        <div class="pill"><span class="k">Stage</span><b id="stage">1</b></div>
+        <div class="pill"><span class="k">HP</span><b><span id="hp">100</span>/<span id="maxHp">100</span></b></div>
+        <div class="pill"><span class="k">O₂</span><b><span id="o2">50</span>/<span id="maxO2">50</span></b></div>
+        <div class="pill"><span class="k">Seeds</span><b id="seedInv">0</b></div>
+        <div class="pill"><span class="k">Planted</span><b><span id="planted">0</span>/<span id="total">0</span></b></div>
+        <div class="pill"><span class="k">Score</span><b id="score">0</b></div>
       </div>
     </header>
 
     <!-- MAIN -->
-    <main class="content">
+    <main class="main">
       <!-- GAME -->
-      <section class="gameShell">
-        <canvas id="gameCanvas" width="960" height="540"></canvas>
+      <section class="gameFrame">
+        <canvas id="gameCanvas"></canvas>
 
-        <!-- O2 0 warning (id 유지) -->
+        <!-- O2 경고 -->
         <div id="warnOverlay" class="warnOverlay">
           <div class="warnChip">
-            <span class="dot"></span>
-            <span class="txt">⚠ 산소가 0입니다! HP 감소 중…</span>
+            <div class="warnDot"></div>
+            <div class="warnTxt">⚠ 산소가 0입니다! HP 감소 중…</div>
           </div>
         </div>
 
-        <!-- DIALOGUE (id 유지) -->
-        <div id="dialogue" class="dialogue is-open">
-          <div class="dlgWrap">
-            <div class="dlgLeft">
+        <!-- 카드 선택 오버레이 -->
+        <div id="cardOverlay" class="overlay">
+          <div class="overlayCard">
+            <div class="overlayTop">
+              <div class="overlayTitle" id="cardTitle">스테이지 시작 - 카드 선택</div>
+              <div class="timer"><span id="cardTimer">5.0</span>s</div>
+            </div>
+            <div id="cardRow" class="cardRow"></div>
+            <div class="overlayHint">카드를 클릭하면 즉시 선택됩니다.</div>
+          </div>
+        </div>
+
+        <!-- 로딩 -->
+        <div id="loading" class="loading">
+          <div class="loadingBox">
+            <div class="loadingTitle">Loading…</div>
+            <div id="loadingText" class="loadingText">리소스를 불러오는 중…</div>
+          </div>
+        </div>
+
+        <!-- 대화창 -->
+        <div id="dialogue" class="dialogue">
+          <div class="dlgInner">
+            <div class="dlgPortrait">
+              <div class="avatarGlow"></div>
               <div class="avatarFrame">
-                <img id="dlgAvatar" alt="avatar"/>
+                <img id="dlgAvatar" class="dlgAvatar" alt="avatar"/>
+                <div id="dlgAvatarFallback" class="dlgAvatarFallback">?</div>
               </div>
-              <div class="avatarLabel">avatar</div>
             </div>
 
-            <div class="dlgMain">
+            <div class="dlgBox">
               <div class="dlgTop">
-                <div class="who">
-                  <span id="dlgName" class="dlgName">연구원1</span>
-                  <span id="dlgRole" class="dlgRole">LAB-01</span>
+                <div class="namePlate">
+                  <div id="dlgName" class="dlgName">??</div>
+                  <div id="dlgRole" class="dlgRole">SIGNAL</div>
                 </div>
-                <div class="dlgBtns">
-                  <button id="dlgAutoBtn" class="btnGhost">AUTO: OFF</button>
-                  <button id="dlgSkipBtn" class="btnGhost">SKIP</button>
+                <div class="dlgControls">
+                  <button id="dlgAutoBtn" class="miniBtn">AUTO: OFF</button>
+                  <button id="dlgSkipBtn" class="miniBtn">SKIP</button>
                 </div>
               </div>
 
-              <div class="dlgTextArea">
+              <div class="dlgBubble">
                 <div id="dlgText" class="dlgText">…</div>
-              </div>
-
-              <div class="dlgBottom">
-                <div class="dlgHelp">클릭/Space: 다음</div>
-                <div class="dlgHelp">Shift: AUTO 토글</div>
+                <div class="dlgHint">
+                  <div>클릭/Space: 다음</div>
+                  <div>Shift: AUTO 토글</div>
+                </div>
               </div>
             </div>
           </div>
 
           <div id="dlgNext" class="dlgNext">▶</div>
         </div>
+
+        <!-- stage rule (원래 쓰던 id 유지) -->
+        <div id="stageRuleOverlay" class="stageRuleOverlay"></div>
       </section>
 
-      <!-- RIGHT SIDE -->
-      <aside class="right">
-        <div class="panel">
+      <!-- SIDE -->
+      <aside class="side">
+        <div class="panelBox">
           <div class="panelTitle">보유 카드</div>
           <div id="ownedCards" class="ownedCards"></div>
         </div>
 
-        <div class="panel">
+        <div class="panelBox">
           <div class="panelTitle">힌트</div>
           <div id="hint" class="hint">
             ←/→ 이동, Space 점프, E 심기, F 물주기, Q 재시작, R 카드발동, Shift 자동대화
           </div>
         </div>
-
-        <div class="panel" style="display:none">
-          <div class="panelTitle">RULE</div>
-          <div id="stageRuleOverlay" class="ruleBox">추가 규칙 없음</div>
-        </div>
       </aside>
     </main>
   </div>
 
-  <!-- CARD OVERLAY (id 유지) -->
-  <div id="cardOverlay" class="overlay">
-    <div class="overlayPanel">
-      <div class="overlayTop">
-        <div id="cardTitle" class="overlayTitle">스테이지 시작 - 카드 선택</div>
-        <div class="overlayTimer"><span id="cardTimer">5.0</span>s</div>
-      </div>
-      <div id="cardRow" class="cardRow"></div>
-      <div class="overlayHint">클릭으로 선택</div>
-    </div>
-  </div>
-
-  <!-- LOADING (id 유지) -->
-  <div id="loading" class="loading">
-    <div class="loadingBox">
-      <div class="spinner"></div>
-      <div id="loadingText" class="loadingText">Loading…</div>
-    </div>
-  </div>
-
-  <script type="module" src="./game.js?v=ui_full_01"></script>
+  <script src="./game.js?v=ui_final"></script>
 </body>
 </html>
