--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <body>
 
+  <div id="main-menu" class="screen">
+        <h1>SUPER WEB GAME</h1>
+        <button class="start-btn" onclick="startGame()">GAME START</button>
+    </div>
+
+    <div id="game-screen" class="screen">
+        <p>게임 플레이 중...</p>
+        </div>
+
   <div class="stage-banner">
         STAGE 1 - 시작의 숲
     </div>
