--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
   <div class="app">
+    <div id="main-menu" class="screen">
+        <h1>SUPER WEB GAME</h1>
+        <button id="start-btn" class="start-btn">GAME START</button>
+    </div>
 
     <!-- TOP BAR -->
     <header class="topbar">
