--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-  <div class="app">
+<div class="app">
     <div id="main-menu" class="screen">
         <h1>SUPER WEB GAME</h1>
         <button id="start-btn" class="start-btn">GAME START</button>
     </div>
+
+    <div id="game-container" style="display: none;">
 
     <!-- TOP BAR -->
     <header class="topbar">
@@ -55,7 +57,7 @@
         </div>
         
         <!-- DIALOGUE (id 유지) -->
-        <div id="dialogue" class="dialogue is-open">
+        <div id="dialogue" class="dialogue>
           <div class="dlgWrap">
             <div class="dlgLeft">
               <div class="avatarFrame">
@@ -116,6 +118,8 @@
  
       </aside>
 </main>
+</div> </div>
+  
 </div>
   
   <!-- CARD OVERLAY (id 유지) -->
